# Rust-Training

./: README.md
module1/rustbasic/: Cargo.toml  Lab9.rs
module1/rustbasic/rust-workspace/: cargo.toml
module1/rustbasic/rust-workspace/crates/app/: Cargo.toml
module1/rustbasic/rust-workspace/crates/app/src/: main.rs
module1/rustbasic/rust-workspace/crates/utils/src/: lib.rs
module2/ownership-lifetime/: Cargo.toml  config.csv  config.json  config.toml  sample.txt  tasks.json
module2/ownership-lifetime/src/: CSVParses.rs  Lab18B.rs  Lab18C.rs  Lab19B.rs  Lab20B.rs
module3/AdvancedRust/: Cargo.toml
module3/benchmarking/: Cargo.toml
module3/benchmarking/benches/: vec_sort.rs
module3/tokio_server_fixed/: Cargo.toml
module3/tokio_server_fixed/src/: main.rs
module4/Final_Polishing_Advanced/lab39C/: Cargo.toml  Readme.md
module4/Final_Polishing_Advanced/lab39C/src/: main.rs
module4/Final_Polishing_optimize/: Cargo.toml
module4/Final_Polishing_optimize/src/: main.rs
module4/Rust-Concurrency/concurrency-programming-via-rust/: Cargo.toml  README.md
module4/Rust-Concurrency/concurrency-programming-via-rust/channel/: Cargo.toml
module4/Rust-Concurrency/concurrency-programming-via-rust/channel/.cargo/: config.toml
module4/Rust-Concurrency/concurrency-programming-via-rust/channel/src/: lib.rs  main.rs  others.rs
module4/Rust-Concurrency/concurrency-programming-via-rust/parking_lot_examples/src/: lib.rs
module4/Rust-Concurrency/concurrency-programming-via-rust/special/: Cargo.toml
module4/Rust-Concurrency/concurrency-programming-via-rust/thread/: Cargo.toml
module4/Rust-Concurrency/concurrency_basic/: Cargo.toml
module4/Rust-Concurrency/concurrency_basic/src/: main.rs
module4/Rust-Optimization/my-rust-project/: Cargo.toml
module4/Rust-Optimization/my-rust-project/src/: main.rs
module4/Rust-SmartPointer/smartpointer/src/: main.rs
module4/Rust-ffi/c-ffi-rs/: Cargo.toml
module4/Rust-ffi/c-ffi-rs/c_lib/: add_one.c
module4/Rust-ffi/c-ffi-rs/src/: lib.rs  main.rs
module4/counter_compare/: Cargo.toml
module4/counter_compare/src/: main.rs
module4/custom_iterator/: Cargo.toml
module4/custom_iterator/src/: main.rs
module4/final_polishing/: Cargo.toml
module4/generic_graph/: Cargo.toml
module4/generic_graph/src/: main.rs
module4/macro_demo/src/: main.rs
module4/producer_consumer/: Cargo.toml
module4/producer_consumer/src/: main.rs
module4/rust-design-patern/sigletone/: Cargo.toml
module4/rust-design-patern/sigletone/src/: config.rs  main.rs
