[package]
name = "lab39B"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Link Time Optimization
codegen-units = 1     # Better optimization
panic = "abort"       # No unwinding → smaller binary
strip = true          # Strip symbols (Rust 1.70+)

